# agent-kit

./: .gitignore  README.md  pyproject.toml
agent_kit/: openai_adapter.py
src/agent_kit/: __init__.py  ai_client.py  factory.py  models.py  openai_adapter.py
tests/: test_ai_client.py  test_factory.py  test_models.py  test_openai_adapter.py  test_public_api.py
