[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-kit"
version = "0.1.0"
description = "Minimal AI provider abstraction for agent harnesses"
requires-python = ">=3.10"
dependencies = ["openai>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_kit"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy"]
